deploy/kustomize/overlays/production/deployment-backend-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtvalidate-backend
spec:
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 2Gi
